# StormByte-BuildEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  helpers.cmake  init_vars.cmake  propagate_vars.cmake
cmake/: optimizations.cmake
component/: bundler.bat.in  bundler.sh.in  component_shared.cmake.in  component_shared_dependant.cmake.in  component_static.cmake.in  component_static_dependant.cmake.in  helpers.cmake  init_vars.cmake
env/: CMakeLists.txt  helpers.cmake  init_vars.cmake  propagate_vars.cmake  runner_linux.sh.in  update_toolchain.cmake
tools/: CMakeLists.txt  helpers.cmake  init_vars.cmake  propagate_vars.cmake
tools/cmake/: build.cmake.in  configure.cmake.in  helpers.cmake  init_vars.cmake  install.cmake.in  propagate_vars.cmake
tools/extra/pkgconf/: init_vars.cmake  propagate_vars.cmake  update_toolchain.cmake
tools/git/: helpers.cmake  init_vars.cmake  patch.cmake.in  propagate_vars.cmake  reset.cmake.in
tools/meson/: compile.cmake.in  helpers.cmake  init_vars.cmake  install.cmake.in  propagate_vars.cmake  setup.cmake.in
tools/ninja/: CMakeLists.txt  init_vars.cmake  propagate_vars.cmake
tools/pkgconf/: init_vars.cmake
